# fbrs

./: Cargo.toml  README.md  config
.github/workflows/: main.yml
src/: config.rs  error.rs  file_watcher.rs  lib.rs  main.rs  processor.rs
