[package]
name = "fbr-service"
authors = ["HeadIron <i@liangzhicheng.cc>"]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
thiserror = "1.0.49"
once_cell = "1.18.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
globset = "0.4.13"
futures = "0.3.28"
