[package]
name = "fbr-service"
authors = ["HeadIron <i@liangzhicheng.cc>"]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
clap = { version = "4.4.6", features = ["derive"] }
dotenv = "0.15.0"
thiserror = "1.0.49"
once_cell = "1.18.0"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
globset = "0.4.13"
futures = "0.3.28"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
mime = "0.3.17"
reqwest = "0.11.22"
http = "0.2.9"
url = "2.4.1"
async-trait = "0.1.74"
